resources/css/style.css
/* Universal Styles */

html {
  font-family: 'Ariel', sans-serif;
  font-size: 24px;
}

body {
  font-family: 'Ariel', sans-serif;
  text-align: center;
  background-color: white;
  color: gray;
}

.center {
  text-align: center;
}

/* Header */

header {
  position: fixed;
  z-index: 100;
  width: 100%;
  border-bottom: solid 1px #c6c1c1;
  background-color: white;
}

header .content {
  display: flex;
  /* align-items: center; */
  width: 100%;
  padding: 1.875;
  margin-top: 0;
}

header .logo {
  flex: 1;
}

a {
  color: gray;
  text-decoration: none;
}

header .sign-in a {
  color: gray;
  text-decoration: none;
  padding-left: 3.5rem;
  text-align: right;
  justify-content: flex-end;
  display: flex;
}

#intro-section {
padding: 1.25rem;
background-color: lightgray;
}

#intro-section .intro {
  padding: 1.25rem;
}

.center {
text-align: center;
}

#intro-section .image-container {
display: flex;
max-width: 60%;
padding: 0 1%;
}

.image-container {
  overflow: hidden;
}

.image-container img {
  display: block;
  object-fit: cover;
  max-width: 100%;
}

#intro-section .content {
padding: 2.25rem;
color: gray;
justify-content: flex-end;
}

.intro h1 {
padding: 1.25rem;
font-size: 48px;
color: gray;
font-weight: bold;
}

.intro h2 {
padding: 1.25rem;
font-size: 24px;
color:gray;
}

.intro .start-here {

}

.intro .button {

}

